deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  selector:
    matchLabels:
      testapp: v1
  replicas: 2
  template:
    metadata:
      labels:
        testapp: v1
    spec:
      containers:
      - name: testapp
        image: suhwan11/hello-world:49
        ports:
        - containerPort: 8080
          protocol: TCP
