front-deployment-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy-admin
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend-admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  minReadySeconds: 20
  template:
    metadata:
      name: front-deploy-admin
      labels:
        tier: frontend-admin
    spec:
      containers:
      - name: front-app-admin
        image: suhwan11/frontend-admin:5
        ports:
        - containerPort: 80
          protocol: TCP
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - frontend-admin
            topologyKey: "kubernetes.io/hostname"
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - backend
            topologyKey: "kubernetes.io/hostname"
