front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      name: front-deploy
      labels:
        tier: frontend
    spec:
      containers:
      - name: front-app
        image: suhwan11/frontend:testv2
        ports:
        - containerPort: 80
          protocol: TCP
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - frontend
            topologyKey: "kubernetes.io/hostname"
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: tier
                operator: In
                values:
                - backend
            topologyKey: "kubernetes.io/hostname"
