front-svc-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-admin
spec:
  type: NodePort
  ports:
  - port: 4000
    targetPort: 80
    nodePort: 31113
  selector: 
    tier: frontend-admin
