front-svc-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc-user
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 31112
  selector: 
    tier: frontend-user
