svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    testapp: v1
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
