back-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ing
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: eks-demo-group
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /back 
        backend: 
          service:
            name: back-svc
            port:
              number: 8080
