ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing
spec:
  rules:
    http:
      paths:
      - pathType: Prefix
        path: / 
        backend: 
          service:
            name: test
            port:
              number: 80
